# tikira-engine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: Application.h  HUD.h  IModule.h  Launch.h  Log.h  TKMath.h  TiKiRa.h  Window.h
src/: Application.cpp  HUD.cpp  Launch.cpp  Log.cpp  TiKiRa.cpp  Window.cpp  main.cpp
tests/: .clang-tidy
tools/blender_model3d/: io_scene_m3d.py
